<resources>
    <string name="app_name">Homework</string>
    <string name="age_limit_13plus">%d+</string>
    <string name="back">Back</string>
    <string name="movie_name">Movie name</string>
    <string name="movie_genre">Movie genre</string>
    <string name="movie_reviews">%d reviews</string>
    <string name="movie_details_storyline">Storyline</string>
    <string name="movie_details_description">Movie storyline</string>
    <string name="movie_details_cast">Cast</string>
    <string name="movie_details_actor_photo">Actors photo</string>
    <string name="movies_list_title">Movies list</string>
    <string name="movies_list_minutes">%d min</string>
    <string name="movies_list_like">Like icon</string>
    <string name="retry">Retry</string>
    <string name="check_internet_connection">Check internet connection!</string>
    <string name="refreshWorker_has_started">RefreshWorker has started</string>
    <string name="database_updated_tap_to_new_movie">Movies database has been updated. Tap to open new movie</string>
    <string name="database_updated_tap_to_top_rated_movie">Movies database has been updated. Tap to open top rated movie</string>
    <string name="refreshWorker_failed">RefreshWorker failed</string>
    <string name="notification_channel_name">WorkManager notifications</string>
    <string name="notification_channel_description">Shows notifications about WorkManager states</string>
    <string name="notification_title">Refresh worker</string>
    <string name="schedule_to_the_calendar">Schedule to the calendar</string>
    <string name="tap_to_schedule_date">Tap to schedule date</string>
    <string name="tap_to_schedule_time">Tap to schedule time</string>


</resources>